# CMakeMultiConfiguration

./: CMakeLists.txt  main.cpp
7.2.2/: CMakeLists.txt  version.cpp  version.h
7.2.4/: CMakeLists.txt  version.cpp
